@@ -1,7 +1,8 @@
 source :rubygems
 
-gemspec
+gemspec :name => "therubyrhino"
 
 # NOTE: some specs might be excluded @see #spec/spec_helper.rb
 gem 'redjs', :git => 'git://github.com/cowboyd/redjs.git', :group => :test,
              :ref => "b212e50ad347c0d32e53f28d0d627df6b8077e68"
+#gem 'redjs', :path => '../redjs', :group => :test
